# DRF_hpmework

./: .env.sample  pyproject.toml
DRF_homework/: asgi.py  settings.py  urls.py  wsgi.py
courses/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_rename_priview_course_preview.py  0003_alter_course_preview_alter_lesson_preview.py  0004_course_owner_lesson_owner.py
users/: filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers_subscription.py  0004_payment_stripe_payment_status_and_more.py
